deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jzse
  labels:
    app.kubernetes.io/part-of: jzse
